--- a/style.css
+++ b/style.css
@@ -1,21 +1,109 @@
+/* <--general styling--> */
 :root {
   --width: 60vw;
+  --base-size: 1200px;
 }
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #eee;
+  transition: transform 250ms ease-in-out;
 }
-.preloader__container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 100;
-  background-color: white;
+
+
+/* <--header--> */
+header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
-.preloader img {
-  height: 5rem;
+
+/* <--main content--> */
+main {
+  margin: 0 auto;
+  height: calc(var(--width) * (6 / 9));
+  /* width: var(--width); */
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  border: 5px hsl(40, 100%, 50%) solid;
+  border-radius: 1rem;
+  overflow: hidden;
 }
+main * {
+  height: 50%;
+}
+main img {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+/* < available options > */
+#components__container .item {
+  display: inline;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 1rem;
+  border: 1px solid blue;
+  border-radius: 1rem;
+}
+
+#components__container .item:hover {
+  cursor: pointer;
+}
+
+#components__container .item.active {
+  background-color: blue;
+  color: white;
+}
+
+/* < choices > */
+#choices__img {
+  /* position: absolute; */
+  z-index: -1;
+}
+#choices__container {
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+#choices__lines {
+  height: 145px;
+  display: grid;
+  gap: 0;
+  margin-bottom: 15px;
+}
+#choices__container .item {
+  font-size: 1.2em;
+  font-weight: bold;
+  text-align: center;
+  justify-content: center;
+  align-self: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  opacity: 0;
+}
+
+#choices__container .item:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+#choices__container .item:hover::before {
+  content: attr(data-cell);
+  cursor: pointer;
+  opacity: 1;
+}
+
+#choices__container .item.selected {
+  cursor: not-allowed;
+  opacity: 1;
+}
+#choices__container .item.active {
+  background-color: blue;
+  color: white;
+}
+
+/* <--footer--> */
