--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ main img {
   background-color: blue;
   color: white;
 }
+#components__container .item.deactive {
+  cursor: not-allowed;
+  background-color: white;
+  color: gray;
+}
 
 /* < choices > */
 #choices__img {
