--- a/style.css
+++ b/style.css
@@ -2,113 +2,109 @@
 :root {
   --width: 60vw;
   --base-size: 1200px;
+  font-family: cursive;
 }
-* {
+*,
+::after,
+::before {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
 }
 
 body {
-  transition: transform 250ms ease-in-out;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  /* height: 100vh; */
+  position: absolute;
+  transform-origin: top;
+  /* top:0; */
+  left: 0;
+  right: 0;
+  /* bottom: 0; */
+  margin: 0 auto;
+  width: 1500px;
 }
-
+.page__content {
+  background-color: aquamarine;
+  margin: 0 auto;
+  height: 100vh;
+}
 
 /* <--header--> */
-header {
+header,
+footer {
+  box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  padding: 10px;
+  --padding-ver: 50px;
+  padding-left: var(--padding-ver);
+  padding-right: var(--padding-ver);
+}
+header img,
+footer img {
+  width: 75px;
+  margin: 10px;
+  height: auto;
+}
+header img:hover,
+footer img:hover {
+  cursor: pointer;
+}
+header {
+  justify-content: space-between;
+}
+footer {
+  justify-content: space-around;
 }
 
+header h1 {
+  font-size: 36px;
+}
+.background {
+  position: absolute;
+  transform: translateY(2.5%);
+  background-color: blueviolet;
+  width: 100%;
+  height: 95%;
+}
+.footer-background {
+  position: absolute;
+  transform: translateY(-18px);
+  background-color: rgb(127, 172, 255);
+  width: 100%;
+  height: 15%;
+  z-index: -1;
+}
 /* <--main content--> */
 main {
+  position: relative;
+  width: 95%;
   margin: 0 auto;
-  height: calc(var(--width) * (6 / 9));
-  /* width: var(--width); */
+  height: 100%;
   position: relative;
   background-color: rgb(255, 255, 255);
   border: 5px hsl(40, 100%, 50%) solid;
-  border-radius: 1rem;
+  border-radius: 15px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 main * {
-  height: 50%;
+  /* min-height: 50%; */
 }
-main img {
+
+#choices__img {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 
-/* < available options > */
-#components__container .item {
-  display: inline;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 1rem;
-  border: 1px solid blue;
-  border-radius: 1rem;
-}
-
-#components__container .item:hover {
-  cursor: pointer;
-}
-
-#components__container .item.active {
-  background-color: blue;
-  color: white;
-}
-#components__container .item.deactive {
-  cursor: not-allowed;
-  background-color: white;
-  color: gray;
-}
-
 /* < choices > */
-#choices__img {
-  /* position: absolute; */
-  z-index: -1;
-}
-#choices__container {
-  z-index: 3;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
 
-#choices__lines {
-  height: 145px;
-  display: grid;
-  gap: 0;
-  margin-bottom: 15px;
-}
-#choices__container .item {
-  font-size: 1.2em;
-  font-weight: bold;
-  text-align: center;
-  justify-content: center;
-  align-self: center;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  opacity: 0;
-}
-
-#choices__container .item:hover {
-  cursor: pointer;
-  opacity: 1;
-}
-
-#choices__container .item:hover::before {
-  content: attr(data-cell);
-  cursor: pointer;
-  opacity: 1;
-}
-
-#choices__container .item.selected {
-  cursor: not-allowed;
-  opacity: 1;
-}
-#choices__container .item.active {
-  background-color: blue;
-  color: white;
-}
 
 /* <--footer--> */
