--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   --width: 60vw;
   --base-width: 1200px;
   --base-height: 1000px;
-  font-family: cursive;
 }
 *,
 ::after,
@@ -15,6 +14,7 @@
 }
 
 body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   position: absolute;
   transform-origin: top left;
@@ -64,14 +64,15 @@ header h1 {
 .background {
   position: absolute;
   transform: translateY(2.5%);
-  background-color: blueviolet;
+  background-color: rgb(0, 81, 255);
   width: 100%;
   height: 950px;
+  transition: all ease 2s;
 }
 .footer-background {
   position: absolute;
   transform: translateY(-18px);
-  background-color: rgb(127, 172, 255);
+  background-color: rgb(159, 197, 255);
   width: 100%;
   height: calc(0.15 * var(--base-height));
   z-index: -1;
