--- a/styles/options.css
+++ b/styles/options.css
@@ -17,7 +17,8 @@
   font-size: 28px;
   font-weight: bold;
   padding: 15px;
-  border: 1px solid blue;
+  border: 3px solid rgba(0, 153, 255, 0.733);
+  font-weight: bold;
   border-radius: 15px;
 }
 
@@ -26,7 +27,7 @@
 }
 
 #components__container .item.active {
-  background-color: blue;
+  background-color: rgba(0, 153, 255, 0.733);
   color: white;
 }
 #components__container .item.deactive {
