--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,13 +1,14 @@
 .popup__container {
   position: absolute;
-  top: 1rem;
-  bottom: 1rem;
+  top: 20%;
+  bottom: 20%;
+  height: 1000px;
   right: 0;
   left: 0;
   z-index: 100;
   background-color: white;
   border: 5px orange solid;
-  border-radius: 1rem;
+  border-radius: 20px;
   padding: 1rem;
   display: none;
 }
