--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,16 +1,17 @@
 .popup__container {
   position: absolute;
-  top: 20%;
+  top: 10%;
   bottom: 20%;
   height: 1000px;
-  right: 0;
-  left: 0;
+  right: 10%;
+  left: 10%;
   z-index: 100;
   background-color: white;
   border: 5px orange solid;
   border-radius: 20px;
   padding: 1rem;
   display: none;
+  font-size: 45px !important;
 }
 .popup__container .body {
   border-radius: 1rem;
@@ -20,6 +21,6 @@
 .popup__container.active {
   display: block;
 }
-#close__popup:hover{
+#close__popup:hover {
   cursor: pointer;
 }
